delete redundant src/main

--- a/Task_2_1_2/Client/build.gradle
+++ b/Task_2_1_2/Client/build.gradle
@@ -13,6 +13,10 @@ java {
     }
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0' //version required
+}
+
 repositories {
     mavenCentral()
 }
